--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
     // "linebreak-style": ["error", "windows"],
     "quotes": ["error", "double"],
     "semi": ["error", "always"],
+    "prettier/prettier": ["error", { "endOfLine": "auto" }],
     "@typescript-eslint/quotes": [
       "error",
       "double",
