--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["linebreak", "reduxjs", "testid", "Toastify"]
+  "cSpell.words": ["cloudinary", "linebreak", "reduxjs", "testid", "Toastify"]
 }
