--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,20 +4,34 @@
     "es2021": true,
     "jest": true
   },
+  // "include": ["**/*.ts", "**/*.js"],
+  // "allowJs": true,
   "extends": [
     "react-app",
     "react-app/jest",
     "eslint:recommended",
+    // "typescript-eslint/parser",
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended"
   ],
-  "overrides": [],
+  "overrides": [
+    // {
+    //   "files": ["*.ts"],
+    //   "parserOptions": {
+    //       "project": ["**/tsconfig.json"],
+    //   }
+    // }
+  ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
     "project": "./tsconfig.json"
+    // "project": [
+    //   "./tsconfig.json"
+    // ],
+    // "tsconfigRootDir": "__dirname"
   },
   "plugins": ["react", "@typescript-eslint", "prettier"],
   "rules": {
@@ -37,3 +51,5 @@
     "react/jsx-props-no-spreading": ["warn"]
   }
 }
+
+// /* eslint-disable */
